implements fix for email formatting on mobile

--- a/app/assets/stylesheets/email.less
+++ b/app/assets/stylesheets/email.less
@@ -1,6 +1,6 @@
 @import "variables";
 
-@media all and (max-width: 480px){
+@media screen and (max-width: 480px){
 	
 	.email-body{
 		width: 100% ! important;
@@ -11,6 +11,14 @@
 		width: 80% ! important;
 		margin-left: 10% ! important;
 	}
+
+	#email-title{
+	
+	h2{
+		color: @default-blue ! important;
+	}
+}
+
 }
 
 
@@ -18,6 +26,7 @@
 /// HEADER CODE ////////
 ////////////////////////
 .email{
+	width: 100%;
 	margin-top: 60px;
 	p{
 		font-weight: 300;
@@ -33,8 +42,8 @@
 	.bottom-button{
 		background-color: @default-blue;
 		text-align: center;
-		width: 80%;
-		margin-left: 10%;
+		width: 90%;
+		margin-left: 5%;
 		margin-top: 10px;
 		border-radius: 10px;
 		padding: 15px;
@@ -199,8 +208,9 @@
 
 .email-title{
 	background-color: @default-blue;
+	width: 100%;
 	h1{
-		font-size: 38px;
+		font-size: 48px;
 		font-weight: 600;
 		color:white ! important;
 		text-transform: uppercase;
@@ -209,6 +219,19 @@
 		text-align: center;
 	}
 
+}
+
+#email-title{
+	text-align: center;
+	margin-top: 100px;
+	margin-bottom: 40px;
+	h2{
+		color: @gray-regular;
+		font-weight: 700;
+		font-family: Montserrat, sans-serif;
+		text-transform: uppercase;
+		font-size: 38px;
+	}
 }
 
 
@@ -227,8 +250,8 @@
 ///////////////////////
 
 .email-body{
-	width: 70%;
-	margin-left: 15%;
+	width: 90%;
+	margin-left: 5%;
 	p{
 		font-size: 20px;
 		width: 80%;
